--- a/grid practice/grid-auto-fill(fit) and min-max/style.css
+++ b/grid practice/grid-auto-fill(fit) and min-max/style.css
@@ -1,22 +1,31 @@
-.auto-fill-grid{
-    width: 600px;
-    grid-template-columns: repeat(auto-fill, 200px);
+.auto-fill-grid {
+  width: 1000px;
+  grid-template-columns: repeat(auto-fill, 200px);
 }
-
 /* auto fill создает столько колонок, сколько вмещается с одинаково заданным размером */
 
-/* !!! auto fill minmax придерживается позиции минимального размера, 
+/* !!! auto fill minmax 
 может !!создавать пустые ячейки grid, 
 только при необходимости, при наполнении будет расширяться к максимальному значению */
 
-.min-max-grid{
-    grid-template-columns: minmax(120px, 30%) minmax(70px, 70%);
+
+
+.min-max-grid {
+  grid-template-columns: minmax(120px, 30%) minmax(70px, 70%);
 }
 
-.auto-fit-grid{
-    grid-template-columns: repeat(auto-fit, minmax(70px, auto));
+/* Таким образом, если родительский контейнер имеет ширину 1000 пикселей,
+первый столбец будет иметь ширину 300 пикселей (30% от 1000), если ширина контейнера будет меньше 400 пикселей,
+минимальное значение 120 пикселей становится равным максимальному значению, 
+то есть 30% ширины родительского контейнера уже не может быть достигнуто, 
+и поэтому первый столбец будет иметь ширину 120 пикселей.
+Аналогично, второй столбец будет иметь ширину 700 пикселей (70% от 1000), если ширина контейнера будет больше 1000 пикселей,
+в противном случае он будет иметь ширину 70 пикселей. */
+
+.auto-fit-grid {
+  grid-template-columns: repeat(auto-fit, minmax(70px, auto));
 }
 
-/* !!! auto fit minmax придерживается позиции максимального размера, 
+/* !!! auto fit minmax 
 не создает!! пустые ячейки grid, 
 будет расширяться к максимальному значению, пока в контейнере есть место*/
