--- a/grid practice/grid-lines/style.css
+++ b/grid practice/grid-lines/style.css
@@ -5,7 +5,7 @@
     grid-template-rows: repeat(6,50px);
 }
 
-/* с помощью этой функции мы выбераем наш блок и перемещаем его задавая координаты */
+/* с помощью этой функции мы выбираем наш блок и перемещаем его задавая координаты */
 
 .line-layout div:nth-child(1){
     grid-column-start: 3;
