--- a/grid practice/grid-ordering/style.css
+++ b/grid practice/grid-ordering/style.css
@@ -2,7 +2,8 @@
     grid-template: repeat(3, 100px)/ 1fr 1fr;
 }
 
-/* изначально у каждого блока order равен 0, блоки располагаются от меньшего order к большему */
+/* изначально у каждого блока order равен 0;
+блоки располагаются от меньшего order к большему */
 
 .ordering-grid div:nth-child(1){
     order: 1;
