--- a/grid practice/grid-place-content/style.css
+++ b/grid practice/grid-place-content/style.css
@@ -32,4 +32,4 @@
     grid-template-columns: 1fr min-content 1fr;    
 }
 
-/* нужно быть осторожным с max content, если контента слишком много, он будет вылазить и может поламать grid */
+/* нужно быть осторожным с max content, если контента слишком много, он будет вылазить и может поломать grid */
