--- a/grid practice/grid-span/style.css
+++ b/grid practice/grid-span/style.css
@@ -1,4 +1,4 @@
-/* как объеденить start и end в единое правило??? */
+/* как объединить start и end в единое правило??? */
 
 .span-layout{
     grid-template-columns: [start-column] 1fr 2fr[logo-block] 1fr [end-column];
@@ -14,7 +14,7 @@
 /* span дает возможность не привязываться к линиям, он сразу дает понять, сколько в сумме (строк или колонок) мы хотим занять  */
 /* например: */
 
-/* со 2-ой строки объеденим 3-и строки */
+/* со 2-ой строки объединим 3-и строки */
 
 .span-layout div:nth-child(1){
     grid-column: start-column/logo-block;
