--- a/grid practice/grid-align-self-item/style.css
+++ b/grid practice/grid-align-self-item/style.css
@@ -1,5 +1,5 @@
 .align-self-item{
-    grid-template: repeat(3, 100px)/ 1fr 1fr;
+    grid-template: repeat(3, 100px)/ 1fr 1fr; /* для строк/для колонок */
     align-items: start;
     justify-items: center;
 }
