--- a/REACT practice/my-app/src/css/main.css
+++ b/REACT practice/my-app/src/css/main.css
@@ -14,7 +14,23 @@ body {
   color: #fff;
 }
 
+::placeholder{
+    padding-left: 15px;
+    color: #3a9bea;
+}
+
 .header {
   background-color: #000;
   padding: 20px;
+  text-align: center;
+}
+
+.classAppStates{
+    background-color: #070;
+    padding: 25px 0 20px 0;
+}
+
+.funAppStates{
+    background-color: #3a9bea;
+    padding: 25px 0 20px 0;
 }
